# ask-before-answer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/: hf_space_readme.md
.github/workflows/: ci.yml  release_hf.yml
app/: app.py
configs/: config.yaml  sweep.yaml  sweep_dpo.yaml  sweep_sft.yaml
configs/data/: ambignq.yaml
configs/deployment/: hf.yaml
configs/evaluation/: default.yaml
configs/model/: gemma2_9b.yaml  llama3_1_8b.yaml  mistral_nemo_12b.yaml  phi3_5_mini.yaml  qwen2_5_7b.yaml  qwen3_4b.yaml
configs/training/: dpo.yaml  grpo.yaml  orpo.yaml  sft.yaml
docs/: ablation_report.md  deployment_workflow.md
scripts/: evaluate.py  generate_report.py  infer.py  preprocess_data.py  publish_to_hf.py  push_to_hub.py  run_ablation.py  run_sweep_trial.py  train_dpo.py  train_grpo.py  train_orpo.py  train_sft.py
slurm/: preprocess.slurm  train_dpo.slurm  train_sft.slurm
src/data/: preprocess.py
src/evaluation/: judge.py  metrics.py
src/inference/: pipeline.py
src/training/: trainer.py
sweeps/: dpo.yaml  sft.yaml
tests/: test_data.py  test_inference.py
