[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askbeforeanswer"
version = "0.1.0"
description = "A production-grade LLM system for clarification-seeking and disambiguation."
authors = [{ name = "Christian Contreras-Campana", email = "christian@example.com" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []
